--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-owl-carousel": "^2.3.3",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.3",
+    "react-share": "^5.1.0",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.8"
   },
@@ -42,5 +43,6 @@
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
-  }
+  },
+  "overrides": {}
 }
