--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
     "react-icons": "^5.0.1",
+    "react-image-magnify": "^2.7.4",
     "react-owl-carousel": "^2.3.3",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.3",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/react-image-magnify": "^2.7.4",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
@@ -44,5 +46,7 @@
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   },
-  "overrides": {}
+  "overrides": {
+    "react": "^18.2.0"
+  }
 }
