--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.6.8",
+    "flutterwave-react-v3": "^1.3.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "moment": "^2.30.1",
@@ -24,6 +25,7 @@
     "react-icons": "^5.0.1",
     "react-image-magnify": "^2.7.4",
     "react-owl-carousel": "^2.3.3",
+    "react-paystack": "^5.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.3",
     "react-share": "^5.1.0",
