--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.3",
     "react-share": "^5.1.0",
+    "react-to-print": "^2.15.1",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.8"
   },
