--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.8",
     "flutterwave-react-v3": "^1.3.2",
     "localforage": "^1.10.0",
@@ -27,7 +28,7 @@
     "react-owl-carousel": "^2.3.3",
     "react-paystack": "^5.0.0",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.22.3",
+    "react-router-dom": "^6.23.0",
     "react-share": "^5.1.0",
     "react-to-print": "^2.15.1",
     "sort-by": "^1.2.0",
