--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "^6.23.0",
     "react-share": "^5.1.0",
     "react-to-print": "^2.15.1",
+    "recharts": "^2.12.6",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.8"
   },
