--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "rc-slider": "^10.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-easy-crop": "^5.0.7",
     "react-helmet-async": "^2.0.4",
     "react-icons": "^5.0.1",
+    "react-image-crop": "^11.0.5",
     "react-image-magnify": "^2.7.4",
     "react-owl-carousel": "^2.3.3",
     "react-paystack": "^5.0.0",
