--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-share": "^5.1.0",
     "react-to-print": "^2.15.1",
     "recharts": "^2.12.6",
+    "socket.io-client": "^4.7.5",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.8"
   },
