--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.8",
+    "crypto-js": "^4.2.0",
     "flutterwave-react-v3": "^1.3.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
@@ -40,6 +41,7 @@
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@types/react-icons": "^3.0.0",
