--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.8",
     "crypto-js": "^4.2.0",
@@ -38,7 +39,8 @@
     "recharts": "^2.12.6",
     "socket.io-client": "^4.7.5",
     "sort-by": "^1.2.0",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.2",
